syntax = "proto3"; // 指定proto版本

package proto;     // 指定包名

option go_package = ".;proto";

// 定义Hello服务
service Hello {
    // 定义SayHello方法
    rpc SayHello(HelloRequest) returns (HelloReply) {}
}

// HelloRequest 请求结构
message HelloRequest {
    string name = 1; // 名字
}

// HelloReply 响应结构
message HelloReply {
    string message = 1; // 消息
}
